--- a/Allies-and-Grand-Fleet.html
+++ b/Allies-and-Grand-Fleet.html
@@ -9,7 +9,7 @@
 <body style="background-color: skyblue;">
     <header>
         <h1 class="top_text">The Straw Hat Pirates Grand Fleet and Allies </h1>
-        <a href="/grand-fleet.jpg" target="blank"><img src="/grand-fleet.jpg" alt="" width="35%" ></a>
+        <a href="grand-fleet.jpg" target="blank"><img src="grand-fleet.jpg" alt="" width="35%" ></a>
     </header>
 
     <main>
@@ -18,13 +18,13 @@
         <section>
             <h2 ID="git_header">Grand Fleet</h2>
             <gfa>
-                <p><img src="/Bartolomeo.jpg"  ></p>
-                <p><img src="/cavendish.jpg"  ></p>
-                <p><img src="/Don Sai.jpg"  ></p>
-                <p><img src="/Hajrudin.jpg"  ></p>
-                <p><img src="/Ideo.jpg"  ></p>
-                <p><img src="/Leo.jpg"  ></p>
-                <p><img src="/Orlumbus.jpg"  ></p>
+                <p><img src="Bartolomeo.jpg"  ></p>
+                <p><img src="cavendish.jpg"  ></p>
+                <p><img src="Don Sai.jpg"  ></p>
+                <p><img src="Hajrudin.jpg"  ></p>
+                <p><img src="Ideo.jpg"  ></p>
+                <p><img src="Leo.jpg"  ></p>
+                <p><img src="Orlumbus.jpg"  ></p>
             </gfa>
             </section> 
                 
@@ -70,7 +70,7 @@
         </section>
         <section>
             <h2>Allies</h2>
-            <a href="/Allies.png" target="blank"><img src="/Allies.png" alt="" width="25%" ></a>
+            <a href="Allies.png" target="blank"><img src="Allies.png" alt="" width="25%" ></a>
             <p>Boa Hancock</p>
             <p>Koby</p>
             <p>Marco</p>
