--- a/Enemies.html
+++ b/Enemies.html
@@ -14,7 +14,7 @@ check everything is 100% good.
 <body style="background-color: skyblue;">
     <header>
         <h1 class="top_text">Enemies of the Straw Hat Pirates!</h1>
-        <a href="/Enemies.webp" target="blank"><img src="/Enemies.webp" alt="" width="35%" ></a>
+        <a href="Enemies.webp" target="blank"><img src="Enemies.webp" alt="" width="35%" ></a>
     </header>
 
     <main>
