--- a/Maps.html
+++ b/Maps.html
@@ -10,7 +10,7 @@
     <header>
        
         <h1>World Maps</h1>
-        <img src="/worldmap2.jpg" alt="" width="40%">
+        <img src="worldmap2.jpg" alt="" width="40%">
     </header>
     <main>
         <p>This is the maps of the world so far that i have.
@@ -19,17 +19,17 @@
         <section>
             <nav id="nav_menu">
                 <ul>
-                    <li><a href="/wano_country.jpg" class="firstitem"target="blank">Country of Wano </a></li>
-                    <li><a href="/alabasta.jpg"target="blank">Alabasta Kingdom</a></li>
-                    <li><a href="/alabasta-redline.jpg"target="blank">World map Redline</a></li>
-                    <li><a href="/amazon_lily.jpg" class="firstitem"target="blank">Amazon Lily </a></li>
-                    <li><a href="/Dressrosa.webp"target="blank">Dressrosa</a></li>
-                    <li><a href="/worldmap2.jpg"target="blank">World map 1</a></li>
-                    <li><a href="/wano_country.jpg" class="firstitem"target="blank">Country of Wano </a></li>
-                    <li><a href="/skypiea.jpg"target="blank">Skypiea</a></li>
-                    <li><a href="/worldmap1.jpeg"target="blank">World Map 2</a></li>
-                    <li><a href="/map.jpeg"target="blank"> Map </a></li>
-                    <li><a href="/Water_7_Infobox.webp"target="blank"> Water 7 </a></li>
+                    <li><a href="wano_country.jpg" class="firstitem"target="blank">Country of Wano </a></li>
+                    <li><a href="alabasta.jpg"target="blank">Alabasta Kingdom</a></li>
+                    <li><a href="alabasta-redline.jpg"target="blank">World map Redline</a></li>
+                    <li><a href="amazon_lily.jpg" class="firstitem"target="blank">Amazon Lily </a></li>
+                    <li><a href="Dressrosa.webp"target="blank">Dressrosa</a></li>
+                    <li><a href="worldmap2.jpg"target="blank">World map 1</a></li>
+                    <li><a href="wano_country.jpg" class="firstitem"target="blank">Country of Wano </a></li>
+                    <li><a href="skypiea.jpg"target="blank">Skypiea</a></li>
+                    <li><a href="worldmap1.jpeg"target="blank">World Map 2</a></li>
+                    <li><a href="map.jpeg"target="blank"> Map </a></li>
+                    <li><a href="Water_7_Infobox.webp"target="blank"> Water 7 </a></li>
                 </ul>
             </nav>
         </section>
