--- a/Allies-and-Grand-Fleet.html
+++ b/Allies-and-Grand-Fleet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monkey D. Luffy</title>
+    <title>Grand Fleet and Allies</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="background-color: skyblue;">
